--- a/class12-materials/class12-materials/class-weekend-boring/css/style.css
+++ b/class12-materials/class12-materials/class-weekend-boring/css/style.css
@@ -17,20 +17,20 @@ button{
   display: block;
   margin: 20px auto;
 }
-ul{
+/* ul{
   width: 100px;
   height: 200px;
   border: 3px solid black;
   margin: 0 auto;
   list-style: none;
   padding: 0;
-}
-li{
+} */
+/* li{
   text-align: center;
   width: 94px;
   height: 49px;
   border: 1px solid black;
-}
+} */
 h2{
   margin: auto;
   font-size: 100px;
@@ -38,7 +38,7 @@ h2{
   font-weight: bold;
   width: 100vw;
   height:auto;
-  border: 3px solid red;
+  /* border: 3px solid red; */
 }
 /******************************************
 /* ADDITIONAL STYLES
@@ -46,6 +46,41 @@ h2{
 #placeToSee {
   border-radius: 15px;
   font-family: cursive;
-  padding: 50px;
+  padding: 15px;
+ width: max-content;
+ margin: 5px auto;
+}
+#instructions {
+  text-align: left;
+  padding-left: 10%;
+  color: green;
+}
+.TODO {
+  margin: 0 auto;
+  width: 500px;
+  border: 3px double rgb(79, 78, 80);
+  text-align: left;
+}
 
-};
+.TODO>li {
+  list-style-type: none;
+  text-decoration: none;
+  text-decoration-line: none;
+  color: rgb(34, 61, 61);
+  text-align: center;
+  width: auto;
+  border: none;
+  /* border-bottom: 2px solid blue; */
+  font-size: larger;
+  line-height: 1.2rem;
+  padding: 5px 5px;
+}
+
+/* 
+Making a clear button
+*/
+
+button#clear {
+  color: blue;
+ 
+}
