--- a/class12-materials/class12-materials/simple-calculator/css/style.css
+++ b/class12-materials/class12-materials/simple-calculator/css/style.css
@@ -13,14 +13,14 @@
 h1, h2{
   text-align: center;
 }
-img{
+/* img{
   display: block;
   height: 300px;
   margin: 0 auto;
-}
+} */
 ul{
   width: 100px;
-  height: 200px;
+  height: 250px;
   border: 3px solid black;
   margin: 0 auto;
   list-style: none;
