adding class16 files & class14 finished files

--- a/class14-materials/class14-materials/bring-it-home-practice/css/style.css
+++ b/class14-materials/class14-materials/bring-it-home-practice/css/style.css
@@ -16,3 +16,12 @@
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+h1{
+  font-size: 3rem;
+  color: Blue;
+
+}
+alert{
+  color: red;
+}
